--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_svg: ^2.0.6
   dartz: ^0.10.1
   equatable: ^2.0.5
+  like_button: ^2.0.5
+  shared_preferences: ^2.1.2
 
 dev_dependencies:
   flutter_test:
