--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shared_preferences: ^2.1.2
   shimmer: ^3.0.0
   modal_bottom_sheet: ^3.0.0-pre
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
