--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shimmer: ^3.0.0
   modal_bottom_sheet: ^3.0.0-pre
   provider: ^6.0.5
+  image_picker: ^1.0.0
 
 dev_dependencies:
   flutter_test:
