fix: pass list of interests to register service

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -111,5 +111,6 @@ flutter:
     - assets/images/cake.jpg
     - assets/images/cookies.jpg
     - assets/images/user_avatar.png
+    - assets/images/interest.jpg
 
 
