--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   modal_bottom_sheet: ^3.0.0-pre
   provider: ^6.0.5
   image_picker: ^1.0.0
+  timeago: ^3.4.0
 
 dev_dependencies:
   flutter_test:
