feat: add post recipe widget

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -113,5 +113,6 @@ flutter:
     - assets/images/cookies.jpg
     - assets/images/user_avatar.png
     - assets/images/interest.jpg
+    - assets/images/gray.png
 
 
