feat: add tags on recipe and change dummy data

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -114,5 +114,7 @@ flutter:
     - assets/images/user_avatar.png
     - assets/images/interest.jpg
     - assets/images/gray.png
+    - assets/images/sushi.jpg
+    - assets/images/tortazo.jpg
 
 
