fix: more creativity on content

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -116,5 +116,6 @@ flutter:
     - assets/images/gray.png
     - assets/images/sushi.jpg
     - assets/images/tortazo.jpg
+    - assets/images/logo.png
 
 
