--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   provider: ^6.0.5
   image_picker: ^1.0.0
   timeago: ^3.4.0
+  visibility_detector: ^0.4.0+2
 
 flutter_icons:
   android: true
