fix: pick image for preparation step

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -127,5 +127,6 @@ flutter:
     - assets/images/tortazo.jpg
     - assets/images/logo.png
     - assets/images/icon.png
+    - assets/images/gray-add.png
 
 
