--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   visibility_detector: ^0.4.0+2
   http: ^1.1.0
   flutter_dotenv: ^5.1.0
+  dio: ^5.3.2
+  http_parser: ^4.0.2
 
 flutter_icons:
   android: true
